@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.dbpedia</groupId>
         <artifactId>extraction</artifactId>
-        <version>4.0-SNAPSHOT</version>
+        <version>4.1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.dbpedia.extraction</groupId>
@@ -230,6 +230,14 @@
                         <launcher>
                             <id>GenerateListOfExistingAbstracts</id>
                             <mainClass>org.dbpedia.extraction.scripts.GenerateListOfExistingAbstracts</mainClass>
+                            <jvmArgs>
+                                <jvmArg>-server</jvmArg>
+                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
+                            </jvmArgs>
+                        </launcher>
+                        <launcher>
+                            <id>TypeConsistencyCheck</id>
+                            <mainClass>org.dbpedia.extraction.scripts.TypeConsistencyCheck</mainClass>
                             <jvmArgs>
                                 <jvmArg>-server</jvmArg>
                                 <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
